# cs161

./: .gitignore  CMakeLists.txt  README.md
week1/completed/: echo.cpp  hello.cpp
week2/: arcade.cpp  arcade1.cpp  firelaws.cpp  makefile  numGuess.cpp
week3/: loop.cpp  makefile  name.cpp  randNum.cpp  randNum2.cpp  strings.cpp
week4/: finalist.cpp  makefile4  mpg.cpp  randFun.cpp  retFun.cpp  secretWord.cpp  size.cpp
week5/: hailstone.cpp  makefile  randFun.cpp  recConvert.cpp  recFun.cpp  refFun.cpp  sortFun.cpp
week6/: arrayAdd.cpp  evenOdd.cpp  grades.cpp  makefile  randFun2.cpp  stringMix.cpp  wordShift.cpp
week6/rust/grades/: Cargo.toml
week6/rust/grades/src/: main.rs
week7/: makefile  sameSum.cpp  symArrays.cpp  ticTacToe.cpp
week8/: carLot.cpp  findMode.cpp  makefile  shopCart.cpp
week9/: carLot2.cpp  geom.cpp  makefile  shopCart2.cpp
