cmake_minimum_required (VERSION 2.6)
project (cs161)
add_executable(hello week1/hello.cpp)
add_executable(echo week1/echo.cpp)
add_executable(firelaws week2/firelaws.cpp)
add_executable(arcade week2/arcade.cpp)
add_executable(arcade2 week2/arcade2.cpp)
add_executable(numGuess week2/numGuess.cpp)
add_executable(strings week3/strings.cpp)
add_executable(name week3/name.cpp)
add_executable(randNum week3/randNum.cpp)
add_executable(loop week3/loop.cpp)
add_executable(randNum2 week3/randNum2.cpp)
add_executable(retFun week4/retFun.cpp)
add_executable(randFun week4/randFun.cpp)
add_executable(mpg week4/mpg.cpp)
add_executable(size week4/size.cpp)
add_executable(finalist week4/finalist.cpp)
add_executable(secretWord week4/secretWord.cpp)
add_executable(recFun week5/recFun.cpp)
add_executable(randFun2 week5/randFun.cpp)
add_executable(refFun week5/refFun.cpp)
add_executable(sortFun week5/sortFun.cpp)
add_executable(hailstone week5/hailstone.cpp)
add_executable(recConvert week5/recConvert.cpp)
